# convoforge-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
entity/: Cargo.toml
entity/src/: channel.rs  channel_role_access.rs  flag.rs  media.rs  message.rs  mod.rs  organization.rs  prelude.rs  profile_image_key.rs  role.rs  seen_message.rs  user.rs  user_channel_view.rs  user_role_access.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240801_133022_create_organization_table.rs  m20240802_093625_create_user_table.rs  m20240805_080851_create_channel_table.rs  m20240805_095452_create_role_table.rs  m20240805_104642_create_channel_role_access_table.rs  m20240805_112029_create_user_role_access_table.rs  m20240805_132555_create_message_table.rs  m20240808_074828_create_media_table.rs  m20240827_121544_create_user_channel_view_table.rs  m20240829_110635_create_seen_message_table.rs  m20240830_125050_create_profile_image_key_table.rs  m20240924_101830_create_flag_table.rs
src/: main.rs
src/middlewares/: auth_middleware.rs  media_middleware.rs  mod.rs
src/routes/: auth_routes.rs  channel_role_access_routes.rs  channel_routes.rs  chat_routes.rs  flag_routes.rs  media_routes.rs  message_routes.rs  mod.rs  organization_routes.rs  presence_routes.rs  role_routes.rs  seen_message_routes.rs  user_channel_view_routes.rs  user_role_access_routes.rs  user_routes.rs
src/utils/: api_response.rs  chat.rs  constants.rs  flag.rs  jwt.rs  key_update.rs  logging.rs  message.rs  mod.rs  organization_util.rs  permissions.rs  (+2 more)
(+15 files in other folders)
